<resources>
    <string name="app_name">iBeacon Finder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_state">ビーコンをさがす</string>
    <string name="menu_find">人をさがす</string>
    <string name="btn_state">ビーコンをさがす</string>
    <string name="btn_find">人をさがす</string>
    <string name="status">Status</string>
    <string name="unknown">-</string>
    <string name="uuid">UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="distance">Distance</string>
    <string name="rssi">RSSI</string>
    <string name="inside">INSIDE</string>
    <string name="outside">OUTSIDE</string>
    <string name="menu_home">Home</string>
    <string name="find_place">見つかった場所</string>
    <string name="find_distance">おおよその距離</string>
    <string name="find_datetime">見つかった日時</string>
    <string name="stay">まだいます</string>
    <string name="leave">もういません</string>
</resources>
